# yambook

./: .gitignore  LICENSE  README.md  bookmark2.yaml  bookmark3.yaml  pyproject.toml
yambook/: bookmark2yaml.py  cli.py  yaml2bookmark.py
